Fix #7254 to support named entityManagerFactory in camel-quarkus-jpa

--- a/integration-tests/jpa/src/main/resources/application.properties
+++ b/integration-tests/jpa/src/main/resources/application.properties
@@ -15,6 +15,10 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 quarkus.datasource.db-kind=${cq.sqlJdbcKind:h2}
-quarkus.datasource.jdbc.max-size=8
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource."test".db-kind=${cq.sqlJdbcKind:h2}
+quarkus.datasource."test".jdbc.max-size=8
+
+quarkus.hibernate-orm."test".packages=org.apache.camel.quarkus.component.jpa.it.model,org.apache.camel.processor.idempotent.jpa
+quarkus.hibernate-orm."test".datasource=test
+quarkus.hibernate-orm."test".database.generation=drop-and-create
