--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -99,6 +99,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.smooks</groupId>
+                <artifactId>smooks-bom</artifactId>
+                <version>${smooks.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- Dependencies a..z; do not remove this comment, it is important when sorting via  mvn process-resources -Pformat -->
 
             <!--$ org.apache.camel $-->
